# rapid-bidder

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
UI/: README.md
bidders/: CMakeLists.txt  bidder_caches.hpp  geo_ad.hpp  http_bidder.cpp  multi_bidder_service.cpp  response_builder.hpp  serialization.hpp
budget/: README.md
clients/: redis_client_adapter.hpp
etc/: README.md  config.cfg
exchange_server/: CMakeLists.txt  README.md  exchange_server.cpp  multi_bidder_exchange_handler.cpp  multi_bidder_exchange_server.cpp  multiexchange_config.hpp
loaders/: CMakeLists.txt  README.md  cache_loader_service.cpp  config.hpp
